package behavioral.command;

interface Activity {
    void execute();
}
